# choose-your-adventure-app

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: database.db  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: story.py
backend/schemas/: job.py  story.py
backend/tests/: conftest.py  test_story_api.py  test_story_generator.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  util.js
frontend/src/components/: StoryGenerator.jsx  StoryLoader.jsx
frontend/src/tests/: StoryGame.test.jsx  StoryGenerator.test.jsx
